[package]
name = "litetl_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# 通用
num_cpus = "1.0"
anyhow = "1.0"
chrono = "0.4"
# 异步
tokio = { version = "1.32.0", features = ["full"] }
futures = "0.3.28"
# 序列化
serde = "1.0.188"
csv = "1.3"

# 数据库驱动
oracle = "0.6.3"
mysql = "26.0.0"
postgres = "0.19.10"
clickhouse = "0.13.2"
mongodb = "3.2.1"
tiberius = "0.12.3"
